Archive2/f4/596f43b16e5aae/output
main.cpp:3:1: error: 'map' in namespace 'std' does not name a type
 std::map <int, vector<pair<int, int>> > ::iterator it1 = Kcom2.begin();
 ^
main.cpp:4:5: error: 'map' in namespace 'std' does not name a type
     std::map<std::pair< int, int>, int> ::iterator it2 = PairSupp.begin();
     ^
main.cpp:5:2: error: 'map' in namespace 'std' does not name a type
  std::map< vector<pair<int, int> >, int> TotalSub;
  ^
main.cpp:9:2: error: expected unqualified-id before 'while'
  while (it1 != Kcom2.end())
  ^
